[package]
name = "handy"
version = "0.1.0"
authors = ["Thom Chiovoloni <chiovolonit@gmail.com>"]
description = "HandleMaps and handles"
edition = "2018"
readme = "README.md"
keywords = ["handle", "index", "stable", "generational"]
categories = ["data-structures", "memory-management", "no-std"]
license = "Apache-2.0 / MIT"

[dependencies]
