[package]
name = "handy"
version = "0.1.4"
authors = ["Thom Chiovoloni <chiovolonit@gmail.com>"]
description = "A library providing handles and handlemaps"
edition = "2018"
readme = "README.md"
keywords = ["handle", "index", "stable", "generational"]
categories = ["data-structures", "memory-management", "no-std"]
license = "Apache-2.0 / MIT"
repository = "https://github.com/thomcc/handy"

[badges]
circle-ci = { repository = "thomcc/handy", branch = "master" }
codecov = { repository = "thomcc/handy", branch = "master", service = "github" }

[dependencies]
